# geo-toolbox

./: .gitattributes  .gitignore  Cargo.toml  Ctmpurban_test.txt  DEVPLAN.md  README.md  ROADMAP.md  WIKI.md  build.bat  config.json  context.md  demo.html  docker-compose.test.yml  package.json  plan.md  progress.md  test-output-geohazard.txt  todos.md  tsconfig.json  warnings.md
.github/workflows/: ci.yml  fuzz.yml  wasm-ci.yml
.omo/run-continuation/: ses_14221b1d8ffeXZXzisI5J3B18A.json
.pi/: SYSTEM.md  mcp.json  pi-messenger.json
.pi/orchestrator/: version.json
adapters/geo-adapter-cad/: Cargo.toml
adapters/geo-adapter-cad/src/: adapter.rs  dxf_export.rs  excel.rs  geojson_export.rs  lib.rs  tools.rs
adapters/geo-adapter-cli/: Cargo.toml
adapters/geo-adapter-cli/src/: adapter.rs  gcs_bridge.rs  lib.rs  raster.rs  tools.rs  vector.rs
adapters/geo-adapter-dssat/: Cargo.toml
adapters/geo-adapter-duckdb/: Cargo.toml
adapters/geo-adapter-duckdb/src/: adapter.rs  lib.rs  store.rs  tools.rs
adapters/geo-adapter-gee/: Cargo.toml
adapters/geo-adapter-gee/src/: adapter.rs  dispatcher.rs  lib.rs  mq.rs  tools.rs  tracker.rs
adapters/geo-adapter-iot/: Cargo.toml
adapters/geo-adapter-iot/src/: adapter.rs  lib.rs  mqtt.rs  tools.rs
adapters/geo-adapter-mcp/: Cargo.toml
adapters/geo-adapter-mcp/src/: adapter.rs  lib.rs
adapters/geo-adapter-modflow/: Cargo.toml
adapters/geo-adapter-osm/: Cargo.toml
adapters/geo-adapter-osm/src/: client.rs  lib.rs  tools.rs
adapters/geo-adapter-pdal/: Cargo.toml
adapters/geo-adapter-pdal/src/: adapter.rs  classify.rs  lib.rs  pipeline.rs
adapters/geo-adapter-pdal/tests/: integration.rs
adapters/geo-adapter-postgis/: Cargo.toml
adapters/geo-adapter-postgis/migrations/: 003_spatial_assets.sql
adapters/geo-adapter-postgis/src/: adapter.rs  batch_writer.rs  carbon_engine.rs  dvc.rs  lib.rs  minio.rs  postgis.rs  timescale.rs  tools.rs
adapters/geo-adapter-pygeoapi/: Cargo.toml
adapters/geo-adapter-pygeoapi/src/: adapter.rs  geometry.rs  lib.rs  raster.rs
adapters/geo-adapter-pygeoapi/tests/: integration.rs
adapters/geo-adapter-qgis/: Cargo.toml
adapters/geo-adapter-qgis/src/: adapter.rs  grpc_client.rs  lib.rs  process_runner.rs  tools.rs
adapters/geo-adapter-stac/: Cargo.toml
adapters/geo-adapter-stac/src/: adapter.rs  client.rs  lib.rs  tools.rs
apps/field-pwa/: index.html  package.json  tsconfig.json  vite.config.ts
bindings/jupyter/: README.md  setup.py
bindings/maplibre-gl-geo-toolbox/: README.md  package.json  vite.config.js
bindings/python/: Cargo.toml  README.md  pyproject.toml  python-bindings-plan.md
bindings/python/geo_toolbox/: __init__.py  __init__.pyi
bindings/python/src/: carbon.rs  crs.rs  geohash.rs  ingest.rs  ingest_tmp.rs  io_util.rs  lib.rs  registry.rs  report.rs  spatial.rs  stats.rs  temporal.rs  tile.rs
bindings/qgis/: Makefile
core/geo-carbon-math/: Cargo.toml
core/geo-carbon-math/benches/: bench_carbon.rs
core/geo-carbon-math/src/: config.rs  engine.rs  factor.rs  feature.rs  lib.rs  pools.rs  report.rs  scenarios.rs  tools.rs  vcs.rs
core/geo-core/: Cargo.toml
core/geo-core/benches/: crs_transform.rs
core/geo-core/src/: config.rs  crs.rs  errors.rs  guard.rs  health.rs  lib.rs  observability.rs  plugin.rs  types.rs
core/geo-emission-factors/: Cargo.toml
core/geo-emission-factors/src/: china.rs  ipcc.rs  lib.rs  query.rs
core/geo-index/: Cargo.toml
core/geo-io/: Cargo.toml
core/geo-io/benches/: io_bench.rs
core/geo-io/src/: camofox.rs  geojson.rs  lib.rs  nmea.rs  tools.rs  validator.rs
core/geo-ogc/: Cargo.toml
core/geo-ogc/src/: common.rs  lib.rs  mvt_source.rs  wfs.rs  wms.rs  wmts.rs  wps.rs
core/geo-raster/: Cargo.toml
core/geo-raster/benches/: bench_ndvi.rs
core/geo-raster/src/: band.rs  grid.rs  lib.rs  mosaic.rs  ndvi.rs  resample.rs  terrain.rs  tiff_writer.rs
core/geo-registry/: Cargo.toml
core/geo-registry/src/: lib.rs  macros.rs  registry.rs
core/geo-report/: Cargo.toml
core/geo-report/src/: engine.rs  lib.rs  report.rs  tools.rs
core/geo-report/templates/_layouts/: base.md.tera
core/geo-report/templates/_partials/: header.md.tera  stats.md.tera  table.md.tera
core/geo-stats/: Cargo.toml
core/geo-temporal/: Cargo.toml
core/geo-temporal/src/: decompose.rs  lib.rs  raster_ts.rs  tools.rs  trend.rs
core/geo-tile/: Cargo.toml
core/geo-tile/benches/: benches.rs
core/geo-tile/src/: lib.rs  mvt.rs  pmtiles.rs  tile_index.rs  tools.rs
core/geo-vector/: Cargo.toml
core/geo-vector/benches/: vector_bench.rs
core/geo-vector/src/: join.rs  lib.rs  ops.rs  stats.rs  tools.rs
crates/geo-carbon/: Cargo.toml
crates/geo-carbon-core/: Cargo.toml
crates/geo-carbon-core/src/: lib.rs  report.rs
crates/geo-carbon/samples/: emission_factors.csv
crates/geo-carbon/src/: audit.rs  emission_factor.rs  lca.rs  lib.rs
crates/geo-cli/: Cargo.toml
crates/geo-cli/examples/: validate_china_coords.rs
crates/geo-cli/src/: main.rs  mcp.rs
crates/geo-cli/src/commands/: carbon.rs  crs.rs  ingest.rs  mod.rs  output.rs  pipeline.rs  process.rs  store.rs
crates/geo-cli/tests/: mcp_smoke.rs
crates/geo-core/: Cargo.toml
crates/geo-gdal/: Cargo.toml
crates/geo-gee/: Cargo.toml
crates/geo-ingest/: Cargo.toml
crates/geo-ogc/: Cargo.toml
crates/geo-output/: Cargo.toml
crates/geo-parquet/: Cargo.toml
crates/geo-qgis/: Cargo.toml
crates/geo-server/: Cargo.toml
docs/: plugin-extension-opportunities.md
fuzz/: Cargo.toml  fuzz_lib.rs
fuzz/fuzz_targets/: geojson_parse.rs  nmea_parse.rs  wkt_parse.rs
output/: check_warnings.txt  clark_detail.txt  cli2.txt  dexing_assessment.json  dexing_copper_assessment.json  dexing_restoration_zones.dxf  hydro_all.txt  hydro_test.txt  ogc_err.txt  ogc_err2.txt  ogc_full.txt  ogc_test.log2  ogc_test.txt  reg2.txt  snyder_detail.txt  snyder_fail.txt  stac_search_results.json  test_cli.txt  test_out.txt  test_registry.txt  uh_only.txt  uh_test2.txt  workspace_err.txt  ws_final.txt  ws_warn.txt  德兴铜矿生态修复评估报告.html  德兴铜矿生态修复评估报告.md
scripts/: ci.ps1
src/: index.ts
(+388 files in other folders)
