[workspace]
resolver = "2"
members = [
    "crates/geo-core",
    "crates/geo-cli",
    "crates/geo-store",
    "crates/geo-ingest",
    "crates/geo-gee",
    "crates/geo-gdal",
    "crates/geo-qgis",
    "crates/geo-carbon",
    "crates/geo-carbon-core",
    "crates/geo-output",
    "crates/geo-wasm",
    "crates/geo-parquet",
    "crates/geo-ogc",
]

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
geo          = "0.28"
geo-types    = "0.7"
geojson      = "0.24"
proj         = "0.27"
sqlx         = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
object_store = { version = "0.11", features = ["gcp", "aws"] }
rumqttc      = "0.24"
gdal         = "0.18"
csv          = "1.3"
toml         = "0.8"
uuid         = { version = "1", features = ["v4", "serde"] }
clap         = { version = "4", features = ["derive"] }
tokio        = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
thiserror    = "2"
rustc-hash   = "2"
r2d2         = "0.8"
tera         = "1"
dxf          = "0.6"
rust_xlsxwriter = "0.79"
calamine     = "0.26"
criterion    = "0.5"
ring         = "0.17"
sha2         = "0.10"
async-nats   = "0.38"
chrono       = { version = "0.4", features = ["serde"] }
futures      = "0.3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
