[workspace]
resolver = "2"
members = [
    # ── 原有 crate ──
    "core/geo-core",
    "crates/geo-cli",
    "crates/geo-wasm",
    "crates/geo-server",
    "crates/geo-wiring",
    "core/geo-parquet",
    "core/geo-ogc",

    # ── Round 1: Core 层新增 ──
    "core/geo-carbon-math",
    "core/geo-raster",
    "core/geo-stats",
    "core/geo-io",

    # ── Round 1: Plugin 层新增 ──
    "plugins/geo-plugin-carbon",
    "plugins/geo-plugin-ecology",

    # ── Round 2: Core 层补齐 ──
    "core/geo-vector",
    "core/geo-index",
    "core/geo-report",
    "core/geo-emission-factors",

    # ── Round 2: Plugin 层补齐 ──
    "plugins/geo-plugin-survey",
    "plugins/geo-plugin-urban",
    "plugins/geo-plugin-hydro",
    "plugins/geo-plugin-geohazard",
    "plugins/geo-plugin-agri",
    # ── Round 1: Core 层新增 (拓展路线图) ──
    "core/geo-tile",
    "core/geo-temporal",
    "plugins/geo-plugin-energy",
    "plugins/geo-plugin-forestry",
    "plugins/geo-plugin-coastal",

    # ── Round 3: Registry ──
    "core/geo-registry",

    # ── Round 1: Adapter 层新增 (拓展路线图) ──
    "adapters/geo-adapter-duckdb",
    "adapters/geo-adapter-stac",
    "adapters/geo-adapter-osm",

    # ── Round 3: Adapters ──
    "adapters/geo-adapter-postgis",
    "adapters/geo-adapter-gee",
    "adapters/geo-adapter-qgis",
    "adapters/geo-adapter-cad",
    "adapters/geo-adapter-cli",
    "adapters/geo-adapter-iot",

    # ── Examples ──
    "examples/dexing-copper",

    # ── Python Bindings ──
    "bindings/python",
]

[workspace.dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
geo          = "0.28"
geo-types    = "0.7"
geojson      = "0.24"
proj         = "0.27"
sqlx         = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
object_store = { version = "0.11", features = ["gcp", "aws"] }
rumqttc      = "0.24"
gdal         = "0.18"
csv          = "1.3"
toml         = "0.8"
uuid         = { version = "1", features = ["v4", "serde"] }
clap         = { version = "4", features = ["derive"] }
tokio        = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
thiserror    = "2"
rustc-hash   = "2"
r2d2         = "0.8"
tera         = "1"
dxf          = "0.6"
rust_xlsxwriter = "0.79"
calamine     = "0.26"
criterion    = "0.5"
ring         = "0.17"
sha2         = "0.10"
async-nats   = "0.38"
chrono       = { version = "0.4", features = ["serde"] }
reqwest      = { version = "0.12", features = ["json"] }
ndarray      = "0.16"
duckdb       = "1.1"
rusqlite     = { version = "0.32", features = ["bundled"] }
futures      = "0.3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
