[package]
name = "geo-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

geo-core = { path = "../core/geo-core" }
geo-io = { path = "../core/geo-io" }
serde_json = "1"

[lib]
path = "fuzz_lib.rs"

[[bin]]
name = "geojson_parse"
path = "fuzz_targets/geojson_parse.rs"
test = false
doc = false

[[bin]]
name = "nmea_parse"
path = "fuzz_targets/nmea_parse.rs"
test = false
doc = false

[[bin]]
name = "wkt_parse"
path = "fuzz_targets/wkt_parse.rs"
test = false
doc = false
