[package]
name = "geo-adapter-cad"
version.workspace = true
description = "Output layer: DXF CAD export, Excel dashboard, GeoJSON serialization, and Markdown report generation"
edition.workspace = true

[dependencies]
geo-core = { path = "../../core/geo-core" }
geo-registry = { path = "../../core/geo-registry" }
geo-adapter-postgis = { path = "../geo-adapter-postgis" }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
rust_xlsxwriter = { workspace = true }
dxf = { workspace = true }
tera = { workspace = true }
geo = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
