[package]
name = "geo-adapter-cli"
version.workspace = true
description = "GDAL raster and vector operations via subprocess or bindings: COG conversion, ogr2ogr, GCS→MinIO bridge"
edition.workspace = true

[features]
default = []
gdal-bindings = ["gdal"]

[dependencies]
geo-core = { path = "../../core/geo-core" }
geo-registry = { path = "../../core/geo-registry", features = ["tokio-runtime"] }
geo-adapter-postgis = { path = "../geo-adapter-postgis", optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
object_store = { workspace = true, optional = true }
gdal = { workspace = true, optional = true }
