[package]
name = "geo-adapter-gee"
version.workspace = true
description = "GEE task dispatcher over NATS/file MQ — delegates to Python gee-worker, tracks callbacks"
edition.workspace = true

[features]
default = ["nats"]
nats = ["async-nats"]
kafka = ["rdkafka"]
file-queue = []

[dependencies]
geo-core = { path = "../../core/geo-core" }
geo-registry = { path = "../../core/geo-registry" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
async-nats = { workspace = true, optional = true }
rdkafka = { version = "0.36", optional = true }
async-trait = "0.1"
futures.workspace = true
