[package]
name = "geo-adapter-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "mcp external adapter for geo-toolbox"

[dependencies]
geo-core = { path = "../../core/geo-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
