[package]
name = "geo-adapter-osm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenStreetMap 适配器 — 按 AOI 拉取 OSM 路网/建筑/POI"

[dependencies]
geo-core = { path = "../../core/geo-core" }
geo-registry = { path = "../../core/geo-registry", features = ["tokio-runtime"] }
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
