[package]
name = "geo-adapter-pdal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PDAL point cloud adapter — LiDAR LAS/LAZ format read/write via pdal pipeline subprocess"

[dependencies]
geo-core = { path = "../../core/geo-core" }
geo-io = { path = "../../core/geo-io" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tempfile = "3"
