[package]
name = "geo-adapter-postgis"
version.workspace = true
description = "Data backbone: PostGIS, TimescaleDB hypertables, MinIO/S3 object storage, and DVC integration"
edition.workspace = true

[features]
default = []
# TimescaleDB hypertable support
timescale = []
# MinIO / S3 / GCS object store integration
minio = ["dep:object_store"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }

[dependencies]
geo-core = { path = "../../core/geo-core" }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "migrate", "uuid"] }
object_store = { workspace = true, optional = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
