[package]
name = "geo-adapter-qgis"
version.workspace = true
description = "QGIS processing delegate: REST client for PyQGIS service or qgis_process subprocess runner"
edition.workspace = true

[dependencies]
geo-core = { path = "../../core/geo-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
