[package]
name = "geo-adapter-qgis"
version.workspace = true
description = "QGIS processing delegate: REST client for PyQGIS service or qgis_process subprocess runner"
edition.workspace = true

[dependencies]
geo-core = { path = "../../core/geo-core" }
geo-registry = { path = "../../core/geo-registry", features = ["tokio-runtime"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
reqwest = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
