[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "geo-toolbox"
version = "0.1.0"
description = "Geo-toolbox Python bindings — tile math, MVT encoding, PMTiles, carbon math"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "geo_toolbox._geo_toolbox"
