[package]
name = "geo-carbon-math"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "纯 Rust 碳核算公式引擎 — IPCC Tier 1 方程、排放因子插值、面积加权，零外部系统依赖"

[dependencies]
geo-core = { path = "../geo-core" }
geo-registry = { path = "../geo-registry" }
geo.workspace = true
geo-types.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
csv.workspace = true
chrono.workspace = true
