[package]
name = "geo-tile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "矢量瓦片 (MVT) 编码 + 栅格瓦片 (PMTiles) 读写 — 纯 Rust，零 C 依赖"

[dependencies]
geo-core = { path = "../geo-core" }
geo-registry = { path = "../geo-registry" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
