[package]
name = "geo-carbon"
version.workspace = true
description = "Carbon accounting engine: IPCC emission factor method, LCA via brightway2, remote sensing carbon sink"
edition.workspace = true

[dependencies]
geo-core = { path = "../geo-core" }
geo-store = { path = "../geo-store" }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "uuid", "macros"] }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
csv = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
