[package]
name = "geo-cli"
version.workspace = true
description = "CLI entry point and MCP server for the geo-toolbox geospatial pipeline"
edition.workspace = true
license.workspace = true

[[bin]]
name = "geo-toolbox"
path = "src/main.rs"

[dependencies]
geo-core = { path = "../../core/geo-core" }
geo-registry = { path = "../../core/geo-registry" }
geo-adapter-postgis = { path = "../../adapters/geo-adapter-postgis" }
geo-io = { path = "../../core/geo-io" }
geo-adapter-iot = { path = "../../adapters/geo-adapter-iot" }
geo-plugin-carbon = { path = "../../plugins/geo-plugin-carbon" }
geo-plugin-ecology = { path = "../../plugins/geo-plugin-ecology" }
geo-raster = { path = "../../core/geo-raster" }
geo-adapter-cad = { path = "../../adapters/geo-adapter-cad" }
geo-report = { path = "../../core/geo-report" }
geo-adapter-gee = { path = "../../adapters/geo-adapter-gee", optional = true }
geo-adapter-cli = { path = "../../adapters/geo-adapter-cli", optional = true }
geo-adapter-qgis = { path = "../../adapters/geo-adapter-qgis", optional = true }
clap.workspace = true
sqlx.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = { version = "0.4", features = ["serde"] }
futures.workspace = true

[features]
default = ["gee", "qgis", "gdal"]
gee = ["geo-adapter-gee"]
qgis = ["geo-adapter-qgis"]
gdal = ["geo-adapter-cli"]
mqtt = ["geo-adapter-iot/mqtt"]
minimal = []
